c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/other_features/prefix_decr_struct.c
// Can't apply prefix or postfix ++/-- to structures
struct s {
    int i;
};

int main(void) {
    struct s my_struct = {1};
    --my_struct;
    return 0;
}